--- a/RehabilitationEquipmentUserApp/app/src/main/AndroidManifest.xml
+++ b/RehabilitationEquipmentUserApp/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RehabilitationEquipmentUserApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".StatusActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.parse.SERVER_URL"
             android:value="@string/back4app_server_url" />
@@ -25,6 +29,7 @@
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="@string/back4app_client_key" />
+
         <activity
             android:name=".SimulationActivity"
             android:exported="true">
