--- a/RehabilitationEquipmentUserApp/app/build.gradle
+++ b/RehabilitationEquipmentUserApp/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation("com.github.PhilJay:MPAndroidChart:v3.1.0")
+    implementation("com.google.android.material:material:1.11.0")
     implementation ("com.github.parse-community.Parse-SDK-Android:parse:1.19.0")
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.12.0'
